# asteroids

./: Cargo.toml  README.md
examples/: kenney.rs  spritesheet_viewer.rs
readme/: choose_ship.avif  gameplay.avif  menu.avif  particles-and-lives.avif
src/: assets.rs  colors.rs  controls.rs  kenney_assets.rs  levels.rs  lib.rs  lives.rs  main.rs  meteors.rs  movement.rs  scores.rs  settings.rs  ship.rs  thing.rs  ufo.rs  ui.rs
src/assets/: space.rs
src/scoring/: display.rs
src/ui/: button.rs  choose_ship.rs  pause.rs  snake_selector.rs
